@@ -12,6 +12,7 @@
  */
 package org.openhab.binding.romyrobot.internal;
 
+import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -29,7 +30,8 @@ public class RomyRobotBindingConstants {
     private static final String BINDING_ID = "romyrobot";
     // List of all Thing Type UIDs
     public static final ThingTypeUID THING_TYPE_ROMY = new ThingTypeUID(BINDING_ID, "aicu");
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_ROMY);
+    // public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_ROMY);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_ROMY);
 
     // List of all Channel ids
 
